--- a/food.html
+++ b/food.html
@@ -48,27 +48,27 @@
     
     <div class="food-selection">
         <div class="food-item">
-            <img src="C:\Users\kimtr\OneDrive\Documents\valentines day\kimohnos-jackiepooy.github.io-main\food\BonChon-B-aa5075515056a36_aa50767f-5056-a36a-0860352840f71b52.jpg" alt="fried chicken">
+            <img src="BonChon-B-aa5075515056a36_aa50767f-5056-a36a-0860352840f71b52.jpg" alt="fried chicken">
             <label><input type="checkbox" name="food" value="fried chicken"> fried chicken</label>
         </div>
         <div class="food-item">
-            <img src="C:\Users\kimtr\OneDrive\Documents\valentines day\kimohnos-jackiepooy.github.io-main\food\Wonton-Noodle-Soup-17.jpeg" alt="noodle">
+            <img src="Wonton-Noodle-Soup-17.jpeg" alt="noodle">
             <label><input type="checkbox" name="food" value="wonton noodle"> wonton noodle</label>
         </div>
         <div class="food-item">
-            <img src="C:\Users\kimtr\OneDrive\Documents\valentines day\kimohnos-jackiepooy.github.io-main\food\Antoya-Korean-BBQ.jpg" alt="kbbq" height="5000">
+            <img src="Antoya-Korean-BBQ.jpg" alt="kbbq" height="5000">
             <label><input type="checkbox" name="food" value="kbbq"> kbbq</label>
         </div>
         <div class="food-item">
-            <img src="C:\Users\kimtr\OneDrive\Documents\valentines day\kimohnos-jackiepooy.github.io-main\food\tonkotsuramenfront-500x500.jpg" alt="ramen">
+            <img src="tonkotsuramenfront-500x500.jpg" alt="ramen">
             <label><input type="checkbox" name="food" value="ranen"> ramen</label>
         </div>
         <div class="food-item">
-            <img src="C:\Users\kimtr\OneDrive\Documents\valentines day\kimohnos-jackiepooy.github.io-main\food\instant-pot-pho-bo-1-1-500x500.jpg" alt="pho">
+            <img src="instant-pot-pho-bo-1-1-500x500.jpg" alt="pho">
             <label><input type="checkbox" name="food" value="pho"> pho</label>
         </div>
         <div class="food-item">
-            <img src="C:\Users\kimtr\OneDrive\Documents\valentines day\kimohnos-jackiepooy.github.io-main\food\download.jpg" alt="sushi">
+            <img src="download.jpg" alt="sushi">
             <label><input type="checkbox" name="food" value="sushi"> sushi</label>
         </div>
     </div>
