--- a/dessert.html
+++ b/dessert.html
@@ -50,15 +50,15 @@
 	
 	<div class = "dessert-selection">
 		<div class = "dessert-item">
-			<img src = "C:\Users\kimtr\OneDrive\Documents\valentines day\kimohnos-jackiepooy.github.io-main\food\Matcha-milk-tea-recipe-with-ice-and-boba.jpg" alt ="milk tea">
+			<img src = "Matcha-milk-tea-recipe-with-ice-and-boba.jpg" alt ="milk tea">
 			<label><input type="checkbox" name="dessert" value="milk tea"> milk tea</label>
 		</div>	
 		<div class = "dessert-item">
-			<img src = "C:\Users\kimtr\OneDrive\Documents\valentines day\kimohnos-jackiepooy.github.io-main\food\meet-fresh-grass-jelly-bowl.jpeg" alt ="meet fresh">
+			<img src = "meet-fresh-grass-jelly-bowl.jpeg" alt ="meet fresh">
 			<label><input type="checkbox" name="dessert" value="meet fresh"> meet fresh</label>
 		</div>	
 		<div class = "dessert-item">
-			<img src = "C:\Users\kimtr\OneDrive\Documents\valentines day\kimohnos-jackiepooy.github.io-main\food\50050-five-minute-ice-cream-DDMFS-4x3-076-fbf49ca6248e4dceb3f43a4f02823dd9.jpg" alt ="ice cream">
+			<img src = "50050-five-minute-ice-cream-DDMFS-4x3-076-fbf49ca6248e4dceb3f43a4f02823dd9.jpg" alt ="ice cream">
 			<label><input type="checkbox" name="dessert" value="ice cream"> ice cream</label>
 		</div>		
 	</div>
