--- a/activities.html
+++ b/activities.html
@@ -49,27 +49,27 @@
 	</div>
 	<div class = "activities-selection">
 		<div class="activity-item">
-			<img src="C:\Users\kimtr\OneDrive\Documents\valentines day\kimohnos-jackiepooy.github.io-main\food\two.0.jpg" alt ="it takes two">
+			<img src="two.0.jpg" alt ="it takes two">
 			<label><input type="checkbox" name="activities" value ="it takes two">it takes two</label>
 		</div>
 		<div class="activity-item">
-			<img src="C:\Users\kimtr\OneDrive\Documents\valentines day\kimohnos-jackiepooy.github.io-main\food\realistic-casino-gambling-illustration_52683-99917.avif" alt ="casino">
+			<img src="realistic-casino-gambling-illustration_52683-99917.avif" alt ="casino">
 			<label><input type="checkbox" name="activities" value ="casino">casino</label>
 		</div>
 		<div class="activity-item">
-			<img src="C:\Users\kimtr\OneDrive\Documents\valentines day\kimohnos-jackiepooy.github.io-main\food\opp.png" alt ="movie theater">
+			<img src="opp.png" alt ="movie theater">
 			<label><input type="checkbox" name="activities" value ="movie theater">movie theater</label>
 		</div>
 		<div class="activity-item">
-			<img src="C:\Users\kimtr\OneDrive\Documents\valentines day\kimohnos-jackiepooy.github.io-main\food\Paint-your-own-Pottery-Right-Image-1.jpeg" alt ="ceramics(color me mine)">
+			<img src="Paint-your-own-Pottery-Right-Image-1.jpeg" alt ="ceramics(color me mine)">
 			<label><input type="checkbox" name="activities" value ="ceramics(color me mine)">ceramics(color me mine)</label>
 		</div>
 		<div class="activity-item">
-			<img src="C:\Users\kimtr\OneDrive\Documents\valentines day\kimohnos-jackiepooy.github.io-main\food\peachandgoma.gif" alt ="bedtime activities">
+			<img src="peachandgoma.gif" alt ="bedtime activities">
 			<label><input type="checkbox" name="activities" value ="bedtime activities">bedtime activities</label>
 		</div>
 		<div class="activity-item">
-			<img src="C:\Users\kimtr\OneDrive\Documents\valentines day\kimohnos-jackiepooy.github.io-main\food\shutterstock_441079591.jpg" alt ="park.jpeg">
+			<img src="shutterstock_441079591.jpg" alt ="park.jpeg">
 			<label><input type="checkbox" name="activities" value ="park.jpeg">park</label>
 		</div>
 	</div>
